fix:add name space

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-sortable-grid",
+  "name": "@kitten-team/react-native-sortable-grid",
   "keywords": [
     "drag-drop",
     "sortable",
