--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "sortable",
     "grid"
   ],
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "Drag-and-drop sortable grid view for React Native.",
   "main": "index.js",
   "scripts": {},
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "lodash": "^4.16.4"
+    "lodash": "^4.16.4",
+    "react":"*"
   }
 }
